Avoid overlaps

--- a/css/main.css
+++ b/css/main.css
@@ -303,7 +303,10 @@ p { margin: 0 0 12px; }
 
 @media (min-width: 768px) { .section .graph { white-space: nowrap; }
   .section .graph:after { content: ''; display: inline-block; vertical-align: middle; width: 0; min-height: 100%; }
-  .section .graph > * { white-space: normal; display: inline-block; vertical-align: top; max-width: 100%; } }
+  .section .graph > * { white-space: normal; display: inline-block; vertical-align: middle; max-width: 100%; }
+  .section .graph .text-block-graph { vertical-align: top; }
+  .section .graph .text-block-map { vertical-align: bottom; }
+}
 
 /* section inverse styles */
 .section.inverse { color: #005689; }
